force-app/main/default/objects/MUSW__ListViewCache__c/MUSW__ListViewCache__c.object-meta.xml
<CustomObject>
    <label>ListView Cache</label>
    <nameField>
        <label>ListView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ListView Cache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>