force-app/main/default/objects/MUSW__ListViewCache__c/fields/MUSW__BG_Filters__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Filters__c</fullName>
    <label>Filters</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>