force-app/main/default/objects/MUSW__ListViewCache__c/fields/MUSW__BG_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_ObjectName__c</fullName>
    <label>Object Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>